prevent horizontal scroll of activities container

--- a/app/scss/activities.scss
+++ b/app/scss/activities.scss
@@ -8,6 +8,7 @@
 
     .activities_container {
         position: relative;
+        overflow-x: hidden;
         overflow-y: scroll;
     }
 
